fixed contact page spacing

--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,7 @@
     min-width: 100px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 2%;
 }
 .contactus table {
     margin-left: auto;
@@ -20,6 +21,10 @@
 }
 .contactus input[type=submit] {
     margin-left: 1px;
+    background-color: #e5e5e5;
+}
+.contactus input[type=submit]:hover {
+    background-color: #f9f9f9;
 }
 .contactus textarea:hover,
 .contactus input:hover {
