--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,9 @@ a:hover {
     width: 100%;
     height: 47px;
 }
-form input:hover {
+form input[type=button]:hover {
     border-color: #d64937;
+    background-color: #f9f9f9;
 }
 .github {
     display: none;
